# a4d

./: .Rbuildignore  .Rhistory  .Rprofile  .gitignore  .lintr  4ADMonthlyTrackerCodebook.xlsx  Add_package_to_test_renv.R  Check_synonym_2022_dummy_patient.R  DESCRIPTION  Data_Flows.pptx  Example_Patient_data.csv  LICENSE  LICENSE.md  Makefile  NAMESPACE  New-2022-dummycolnames.txt  Run_extraction_script_1_patients.R  a4d.Rproj  dbschema_v1.dbs  dbschema_v1.dbs.bak  get_the_latest_static_patient_data.R  master_tracker_variables.xlsx  pre_commit.R  readme.html  readme.md  run_a4d_patient_data.R  run_a4d_product_data.R  run_pipeline.R  run_script_1_extract_nonsensitive_data.R  run_script_1_extract_raw_data.R  run_script_1_patient_data.R  run_script_2_clean_data.R  run_script_3_create_tables.R  synonyms.yaml  tracker_comparison.Rmd
1_Orga/: A4D_Phase1_1_Project_Plan.xlsx
2_Data/: A4DMonthlyTrackerMergedCodebook.xlsx  A4DTracker_Overview.csv  DC_V2_ANON_EXAMPLE.xlsx
3_Code/: 00_Preprocessing_MSD_V1.0.R  00_Preprocessing_MSD_V1.3.R  00_Preprocessing_MSD_refactored.R  00_Preprocessing_MSD_refactored_20230217.R  00_a4d_patient_tracker_extract_helper.R  00_helper_product_data.R  00_helper_product_data_20230217.R  01_a4d_patient_tracker_extract.R  01_a4d_tracker_extract.R  01_a4d_tracker_extract_old.R  01_a4d_tracker_extract_old_updated.R  02_a4d_patient_tracker_format.R  02_a4d_tracker_format.R  02_a4d_tracker_formatAB.R  03_preprocess_product_data.R  10_Run_a4d_tracker_extraction.R  (+6 more)
scripts/python/: .gitignore  README.md  a4d_replacer_tool.spec  main.py  pyproject.toml
(+255 files in other folders)
