[tool.poetry]
name = "play-with-excel"
version = "0.1.0"
description = ""
authors = ["Michael Aydinbas <michael.aydinbas@new-work.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
